==> SiliconLabsSoftware/third_party_hw_drivers_extension/driver/public/silabs/human_presence_ak9753/src/sparkfun_ak9753.c <==
#include <string.h>
#include "sl_sleeptimer.h"
#include "sparkfun_ak9753.h"
#include "sparkfun_ak9753_config.h"
#include "drv_digital_out.h"

sl_status_t sparkfun_ak9753_init(
  sparkfun_ak9753_config_t *sparkfun_ak9753_config)
{
  if (sparkfun_ak9753_config == NULL) {
    return SL_STATUS_INVALID_PARAMETER;
  }

  // Update i2cspm instance
  ak9753_i2c.handle =
    sparkfun_ak9753_config->i2cspm_instance;

  i2c_master_config_t i2c_cfg;
  i2c_master_configure_default(&i2c_cfg);

  i2c_cfg.addr = sparkfun_ak9753_config->I2C_address;

#if (SPARKFUN_AK9753_I2C_UC == 1)
  i2c_cfg.speed = SPARKFUN_AK9753_I2C_SPEED_MODE;
#endif

#if (defined SPARKFUN_AK9753_CONFIG_PDN_PORT) \
  && (defined SPARKFUN_AK9753_CONFIG_PDN_PIN)
  pdn_name = hal_gpio_pin_name(SPARKFUN_AK9753_CONFIG_PDN_PORT,
                               SPARKFUN_AK9753_CONFIG_PDN_PIN);
  digital_out_init(&pdn_out, pdn_name);
  digital_out_high(&pdn_out);
  sparkfun_ak9753_config->PDN_present = true;
#endif

  if (i2c_master_open(&ak9753_i2c, &i2c_cfg)
      == I2C_MASTER_ERROR) {
    return SL_STATUS_INITIALIZATION;
  }

  i2c_master_set_speed(&ak9753_i2c, i2c_cfg.speed);
  i2c_master_set_timeout(&ak9753_i2c, 0);

  uint8_t device_id = 0;
  sl_status_t sc = SL_STATUS_OK;

  sparkfun_ak9753_platform_read_register(SPARKFUN_AK975X_WIA2, &device_id);

  if (device_id != 0x13) {
    return SL_STATUS_FAIL;
  }

  // Set to continuous read
  sc |= sparkfun_ak9753_set_mode(sparkfun_ak9753_config->mode);

  sc |= sparkfun_ak9753_set_cutoff_freq(sparkfun_ak9753_config->cut_off_freq);

  sc |= sparkfun_ak9753_set_hysteresis_ir13(
    sparkfun_ak9753_config->hysteresis_value13);
  sc |= sparkfun_ak9753_set_hysteresis_ir24(
    sparkfun_ak9753_config->hysteresis_value24);
  sc |= sparkfun_ak9753_set_threshold_ir13(true,
                                           sparkfun_ak9753_config->upper_threshold13);
  sc |= sparkfun_ak9753_set_threshold_ir13(false,
                                           sparkfun_ak9753_config->lower_threshold13);
  sc |= sparkfun_ak9753_set_threshold_ir24(true,
                                           sparkfun_ak9753_config->upper_threshold24);
  sc |= sparkfun_ak9753_set_threshold_ir24(false,
                                           sparkfun_ak9753_config->lower_threshold24);
  sc |= sparkfun_ak9753_set_interrupts(
    sparkfun_ak9753_config->int_source_setting);

  sparkfun_ak9753_cfg = *sparkfun_ak9753_config;

  sc |= sparkfun_ak9753_get_dummy();

  if (sc != SL_STATUS_OK) {
    return SL_STATUS_TRANSMIT;
  }
  return SL_STATUS_OK;
}

sl_status_t sparkfun_ak9753_set_threshold_eeprom_ir24(bool height,
                                                      uint16_t threshold_value)
{
  sl_status_t sc = SL_STATUS_OK;
  uint8_t h = threshold_value >> 6; // high bits [11;6]
  uint8_t current_mode = 0;

  threshold_value &= 0b00111111; // low bits
  h &= 0b00111111; // high bits
  threshold_value |= 0b11000000; // mask
  h |= 0b11000000; // mask

  sc |= sparkfun_ak9753_platform_read_register(SPARKFUN_AK975X_ECNTL1,
                                               &current_mode);
  uint8_t temp = SPARKFUN_AK975X_EEPROM_MODE | (current_mode & 0b00111000);
  sc |= sparkfun_ak9753_platform_write_register(SPARKFUN_AK975X_ECNTL1, temp);

  if (height) {
    sc |= sparkfun_ak9753_platform_write_register(SPARKFUN_AK975X_EKEY,
                                                  SPARKFUN_AK975X_EKEY_ON);
    // low byte is at adresse 0x55 OR 0X57 11+[6:0] for ETH24H OR ETH24L
    sc |= sparkfun_ak9753_platform_write_register(SPARKFUN_AK975X_EETH24H_LOW,
                                                  threshold_value);
    sl_sleeptimer_delay_millisecond(15);

    sc |= sparkfun_ak9753_platform_write_register(SPARKFUN_AK975X_EKEY,
                                                  SPARKFUN_AK975X_EKEY_ON);

    sc |= sparkfun_ak9753_platform_write_register(SPARKFUN_AK975X_EETH24H_HIGH,
                                                  h);
    sl_sleeptimer_delay_millisecond(15);
  } else {
    sc |= sparkfun_ak9753_platform_write_register(SPARKFUN_AK975X_EKEY,
                                                  SPARKFUN_AK975X_EKEY_ON);

    sc |= sparkfun_ak9753_platform_write_register(SPARKFUN_AK975X_EETH24L_LOW,
                                                  threshold_value);
    sl_sleeptimer_delay_millisecond(15);

    sc |= sparkfun_ak9753_platform_write_register(SPARKFUN_AK975X_EKEY,
                                                  SPARKFUN_AK975X_EKEY_ON);

    sc |= sparkfun_ak9753_platform_write_register(SPARKFUN_AK975X_EETH24L_HIGH,
                                                  h);
    sl_sleeptimer_delay_millisecond(15);
  }
  sc |= sparkfun_ak9753_platform_write_register(SPARKFUN_AK975X_ECNTL1,
                                                current_mode);

  if (sc != SL_STATUS_OK) {
    return SL_STATUS_TRANSMIT;
  }
  return SL_STATUS_OK;
}

sl_status_t sparkfun_ak9753_set_threshold_eeprom_ir13(bool height,
                                                      uint16_t threshold_value)
{
  sl_status_t sc = SL_STATUS_OK;
  uint8_t h = threshold_value >> 6; // high bits [11;6]
  uint8_t current_mode = 0;

  threshold_value &= 0b00111111; // low bits
  h &= 0b00111111; // high bits
  threshold_value |= 0b11000000; // mask
  h |= 0b11000000; // mask

  sc |= sparkfun_ak9753_platform_read_register(SPARKFUN_AK975X_ECNTL1,
                                               &current_mode);
  uint8_t temp = SPARKFUN_AK975X_EEPROM_MODE | (current_mode & 0b00111000);
  sc |= sparkfun_ak9753_platform_write_register(SPARKFUN_AK975X_ECNTL1, temp);

  if (height) {
    sc |= sparkfun_ak9753_platform_write_register(SPARKFUN_AK975X_EKEY,
                                                  SPARKFUN_AK975X_EKEY_ON);

    // low byte is at adresse 0x52 OR 0X54 11+[6:0] for ETH13H OR ETH13L
    sc |= sparkfun_ak9753_platform_write_register(SPARKFUN_AK975X_EETH13H_LOW,
                                                  threshold_value);
    sl_sleeptimer_delay_millisecond(15);

    sc |= sparkfun_ak9753_platform_write_register(SPARKFUN_AK975X_EKEY,
                                                  SPARKFUN_AK975X_EKEY_ON);

    // high byte is at adresse 0x51 OR 0X53 11+[6:0] for ETH13H OR ETH13L
    sc |= sparkfun_ak9753_platform_write_register(SPARKFUN_AK975X_EETH13H_HIGH,
                                                  h);
    sl_sleeptimer_delay_millisecond(15);
  } else {
    sc |= sparkfun_ak9753_platform_write_register(SPARKFUN_AK975X_EKEY,
                                                  SPARKFUN_AK975X_EKEY_ON);

    // low byte is at address 0x52 OR 0X54 11+[6:0] for ETH13H OR ETH13L
    sc |= sparkfun_ak9753_platform_write_register(SPARKFUN_AK975X_EETH13L_LOW,
                                                  threshold_value);
    sl_sleeptimer_delay_millisecond(15);

    sc |= sparkfun_ak9753_platform_write_register(SPARKFUN_AK975X_EKEY,
                                                  SPARKFUN_AK975X_EKEY_ON);

    // high byte is at adresse 0x51 OR 0X53 11+[6:0] for ETH13H OR ETH13L
    sc |= sparkfun_ak9753_platform_write_register(SPARKFUN_AK975X_EETH13L_HIGH,
                                                  h);
    sl_sleeptimer_delay_millisecond(15);
  }

  sc |= sparkfun_ak9753_platform_write_register(SPARKFUN_AK975X_ECNTL1,
                                                current_mode);

  if (sc != SL_STATUS_OK) {
    return SL_STATUS_TRANSMIT;
  }
  return SL_STATUS_OK;
}

sl_status_t sparkfun_ak9753_set_hysteresis_eeprom_ir24(uint8_t hysteresis_value)
{
  sl_status_t sc = SL_STATUS_OK;
  uint8_t current_mode = 0;
  uint8_t temp = 0;

  // we keep the 5 last bits mask
  hysteresis_value &= 0b00011111;
  hysteresis_value |= 0b11100000;

  sc |= sparkfun_ak9753_platform_read_register(SPARKFUN_AK975X_ECNTL1,
                                               &current_mode);
  temp = SPARKFUN_AK975X_EEPROM_MODE | (current_mode & 0b00111000);
  sc |= sparkfun_ak9753_platform_write_register(SPARKFUN_AK975X_ECNTL1, temp);

  // open EEPROM mode
  sc |= sparkfun_ak9753_platform_write_register(SPARKFUN_AK975X_EKEY,
                                                SPARKFUN_AK975X_EKEY_ON);

  // allow EEPROM writing
  sc |= sparkfun_ak9753_platform_write_register(SPARKFUN_AK975X_EEHYS24,
                                                hysteresis_value);
  sl_sleeptimer_delay_millisecond(15);
  sc |= sparkfun_ak9753_platform_write_register(SPARKFUN_AK975X_ECNTL1,
                                                current_mode);

  if (sc != SL_STATUS_OK) {
    return SL_STATUS_TRANSMIT;
  }
  return SL_STATUS_OK;
}

sl_status_t sparkfun_ak9753_set_hysteresis_eeprom_ir13(uint8_t hysteresis_value)
{
  sl_status_t sc = SL_STATUS_OK;
  uint8_t current_mode = 0;

  // we keep the 5 last bits mask
  hysteresis_value &= 0b00011111;
  hysteresis_value |= 0b11100000;

  sc |= sparkfun_ak9753_platform_read_register(SPARKFUN_AK975X_ECNTL1,
                                               &current_mode);
  uint8_t temp = SPARKFUN_AK975X_EEPROM_MODE | (current_mode & 0b00111000);
  sc |= sparkfun_ak9753_platform_write_register(SPARKFUN_AK975X_ECNTL1, temp);

  // open EEPROM mode
  sc |= sparkfun_ak9753_platform_write_register(SPARKFUN_AK975X_EKEY,
                                                SPARKFUN_AK975X_EKEY_ON);

  //   allow EEPROM writing
  sc |= sparkfun_ak9753_platform_write_register(SPARKFUN_AK975X_EEHYS13,
                                                hysteresis_value);
  sl_sleeptimer_delay_millisecond(15);

  sc |= sparkfun_ak9753_platform_write_register(SPARKFUN_AK975X_ECNTL1,
                                                current_mode);

  if (sc != SL_STATUS_OK) {
    return SL_STATUS_TRANSMIT;
  }
  return SL_STATUS_OK;
}
